--- a/index.html
+++ b/index.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <title>davaleba5</title>
 </head>
+
 <body>
-    
+    <header class="header"> <!-- create header and give a class-->
+        <a class="logo_link" href="index.html"> <!--create logo with link-->
+            <img class="logo" src="images/logo_header.svg" alt="logo_header"> <!--insert logo in header section-->
+        </a>
+        <nav class="nav"> <!--create nav for page -->
+            <ul class="ul"> <!-- create ul for page -->
+                <li>Home</li>
+                <li class="li_central">Post</li>
+                <li>Newsletter</li>
+            </ul>
+        </nav>
+    </header>
+    <section class="section">
+        <img class="image_section" src="images/Rectangle 104.png" alt="">
+        <article class="article">
+            <h2 class="h2">Bersama Lindungi Bumi Kita
+                Untuk Masa Depan</h2>
+            <p class="p1">
+                Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia yang lebih indah dan asri
+                untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia
+                yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta
+                pohon dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk
+                menanam lebih dari 10 juta pohon dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan
+                semua.
+            </p>
+            <button class="button">Read More</button>
+        </article>
+    </section>
+    <article class="article2">
+        <h2 class="h2_2">Tentang Kami</h2>
+        <p class="p2">BERTUMBUH adalah organisasi non-profit yang mempunyai tujuan untuk Melindungi, menjaga, merawat,
+            dan melestarikan pohon-pohon yang ada di dunia serta kami akan terus menjaga kestabilan bumi lewat penanaman
+            dan penghijauan. Lewat penanaman dan penghijauan ini juga kita dapat mencegah berbagai masalah seperti
+            pemanasan global, polusi, banjir, tanah longsor serta terjaganya flora dan dan fauna yang ada di dunia dan
+            oleh dasar ini pula organisasi Bertumbuh dibuat. Kamu juga bisa membantu Bertumbuh dengan cara menjadi
+            relawan, petani serta kamu juga bisa berdonasi untuk mendukung kegiatan oprasional kami.</p>
+    </article>
+    <footer class="footer">
+        <a class="logo_link2" href="index.html"> <!--create logo with link-->
+            <img class="logo2" src="images/logo_header.svg" alt="logo_header"> <!--insert logo in header section-->
+        </a>
+        <section class="section2">
+            <h2 class="h2_3"> SUPPORT</h2>
+            <nav class="nav2">
+                <ul class="ul2">
+                    <li><a class="a" href="banzai1945.github.io/davaleba5/">Contact Us</a></li>
+                    <li class="limidle"><a class="a" href="banzai1945.github.io/davaleba5/">Terms of Service</a></li>
+                    <li><a class="a" href="banzai1945.github.io/davaleba5/">Privacy Policy</a></li>
+                </ul>
+            </nav>
+        </section>
+    </footer>
 </body>
+
 </html>
