--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+        <!-- fontebis shemotana 7 dan 14 mde -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
+    <!-- 16-17 css stilebis shemotana -->
     <title>davaleba5</title>
 </head>
 
@@ -46,6 +48,7 @@
             <button class="button">Read More</button>
         </article>
     </section>
+    <!-- 35-50 sectionis gaketeba -->
     <article class="article2">
         <h2 class="h2_2">Tentang Kami</h2>
         <p class="p2">BERTUMBUH adalah organisasi non-profit yang mempunyai tujuan untuk Melindungi, menjaga, merawat,
@@ -55,6 +58,7 @@
             oleh dasar ini pula organisasi Bertumbuh dibuat. Kamu juga bisa membantu Bertumbuh dengan cara menjadi
             relawan, petani serta kamu juga bisa berdonasi untuk mendukung kegiatan oprasional kami.</p>
     </article>
+    <!-- 52-60 artiklis shemotana -->
     <footer class="footer">
         <a class="logo_link2" href="index.html"> <!--create logo with link-->
             <img class="logo2" src="images/logo_header.svg" alt="logo_header"> <!--insert logo in header section-->
@@ -70,6 +74,7 @@
             </nav>
         </section>
     </footer>
+    <!-- 62-76 footeris shemotana -->
 </body>
 
 </html>
