--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- 52-60 artiklis shemotana -->
     <footer class="footer">
         <a class="logo_link2" href="index.html"> <!--create logo with link-->
-            <img class="logo2" src="images/logo_header.svg" alt="logo_header"> <!--insert logo in header section-->
+            <img class="logo2" src="images/logo.svg" alt="logo_header"> <!--insert logo in header section-->
         </a>
         <section class="section2">
             <h2 class="h2_3"> SUPPORT</h2>
